# login-backend-fastapi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  compose.fastapi.service.yml  compose.fastapi.yml  compose.mongo.yml  compose.mysql.service.yml  compose.mysql.yml  compose.redis.yml  compose.traefik.yml  compose.vueapp.yml  compose.vuecypress.yml  docker-compose.e2e-test.yml  docker-compose.test.yml  docker-compose.yml  fastapi.service.yml  mysql.service.yml  script.sh  scripts_docker.sh  scripts_regular.sh
src/: .env  .env.example  .env.test  .test.env  .test.env.example  .testmondata  Dockerfile  Dockerfile.web  alembic.ini  alembic.sqlite.ini  appFactory.py  app_configurations.py  app_factory.py  conftest.py  main.py  playwright.Dockerfile  pyproject.toml  pytest.ini  requirements.playwright.txt  requirements.txt
src/admin/: admin_users_manager.py
src/admin/api/: resources.py  routes.py
src/admin/view/: mount_admin_app.py
src/admin_app/: app_mounter.py  mount_admin_app.py
src/admin_app/vue_admin_html/: index.html
src/alembic/: env.py
src/alembic/versions/: 005fa1e3ca77_user_session_index_max_length.py  12114d778a07_second_commit.py  16c5e662fae1_1st_migration.py  19144ec6e66f_added_user_sessions_table.py  4bca61b56359_added_user_password_reset_token_table.py  5533cdeeabed_added_fields_name_profile_pic_in_user_.py  74d2d9863b93_first_commit.py  940bc2e1b3fc_first_commit.py  a309f68d53aa_added_in_users_table_is_verified_column.py  b55b53f8fcda_add_cascade_delete_for_email_.py  c5687d7c40ef_imported_admin_users_in_init_file_to_.py  e13c196c34de_first_migration.py  f66b173d2355_first_migration.py  fe8b521ceb20_first_commit.py
src/alembic_sqlite/: env.py
src/alembic_sqlite/versions/: 56ae9ed1ba4e_added_fields_name_profile_pic_in_user_.py  a4cfdc5d543c_new_table_for_admin_app_dev.py  fa7f7f93fb7c_1st_migration.py
src/api/: non_admin_routes.py  routes.py
src/api/admin/: add_resource_url_ids_to_schema_properties.py  adminResourceModel.py  admin_resources_crud_endpoints.py  get_admin_resources_endpoint.py  get_admin_router_for_model.py  routes.py
src/api/authentication/: authenticate_endpoint.py  login_endpoint.py  logout_endpoint.py  password_change_endpoint.py  password_reset_endpoint.py  password_reset_link_endpoint.py  password_reset_link_task.py  routes.py
src/api/email_verification/: email_verification_task.py  resend_verification_email_endpoint.py  routes.py  verify_email_endpoint.py
src/api/items/: routes.py
src/api/items_personal/: routes.py
src/api/quotes/: edit_quote_endpoint.py  edit_quote_text_endpoint.py  like_quote_endpoints.py  routes.py  verify_create_quote_owner_dependency.py  verify_delete_quote_owner_dependency.py
src/api/user/: routes.py
src/api/users/: create_user_endpoint.py  get_user_quotes.py  routes.py  (+3 more)
src/api_dependencies/: admin_route_dependencies.py  common_route_dependencies.py  current_admin_user.py  current_user.py  dependencies_manager.py  restrict_endpoint_to_own_resources_param_item_id_dependency.py  restrict_endpoint_to_own_resources_param_user_id_dependency.py  socket_route_dependencies.py  user_route_dependencies.py  validated_access_token.py  validated_admin_access_token.py
src/background_tasks/: emails.py
src/configurations/: settings.py
src/core/: admin_users_manager.py  app_factory.py  app_lifespan.py  cache_manager.py  cors_settings.py  db_manager.py  environment_settings.py  logging_settings.py  route_dependencies.py  settings.py  swagger_docs.py  token_store_manager.py
src/crud_endpoints_generator/: README.md  crud_base.py  crud_endpoints_generator.py  endpoints_configs.py  endpoints_required.py  resource_configurations.py
src/data/: utils.py
src/env_settings/: settings.py
src/group_chat/: group_chat_message_data.py  socket_message_handler.py
src/helpers_classes/: async_stream.py  oauth2_password_request_form_extended.py  spa_static_files.py
src/password_reset_app/: app_mounter.py  mount_password_reset_app.py
src/rest_endpoints/: health_check.py  routes.py
src/settings/: cors_settings.py  environment_settings.py  logger_settings.py
src/socket_endpoints/: routes.py
src/stores/: get_token_manager.py  store_utils.py
src/test/: conftest.py  env_settings_test.py  test_items.py  test_main.py
(+509 files in other folders)
